upload bấm vào fb qua tab mới
upload bấm vào fb qua tab mới

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <body>
 	<h1 class="behoane" >Xin chào tới trang web hihi</h1>
 	<p class="textx">Web này dùng để rút gọn link không có gì hot cả :))</p>
-	<a class="fbct" href="https://facebook.com/SMLxuneo/">Facebook</a>
+	<a target="_blank" class="fbct" href="https://facebook.com/SMLxuneo/">Facebook</a>
 </body>
 </html>
